Minor correction for force specific avro Small refactor

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,6 +10,10 @@ spring:
         registry:
           url: http://localhost:8081
 
+      specific:
+        avro:
+          reader: true
+
     listener:
       missing-topics-fatal: false
 
