--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,10 @@ dependencies {
 	implementation "org.apache.avro:avro:1.9.2"
 	implementation 'io.confluent:kafka-avro-serializer:5.3.0'
 
+	implementation 'org.postgresql:postgresql'
+
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
 
@@ -44,6 +47,7 @@ dependencies {
 	}
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testImplementation 'org.awaitility:awaitility:4.0.2'
+	testRuntimeOnly 'com.h2database:h2:1.4.200'
 }
 
 test {
