--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -2,6 +2,17 @@ server:
   port: 9000
 
 spring:
+  datasource:
+    url: jdbc:h2:mem:test;MODE=PostgreSQL
+
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQL95Dialect
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
+
   kafka:
     bootstrap-servers: ${spring.embedded.kafka.brokers}
 
