--- a/testing/docker-compose.yml
+++ b/testing/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_NUM_PARTITIONS: 2
 
   schema-registry:
     image: confluentinc/cp-schema-registry:5.4.0
