--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     password: postgres
 
   jpa:
-    show-sql: true
+    show-sql: false
     database-platform: org.hibernate.dialect.PostgreSQL95Dialect
     properties:
       hibernate:
@@ -31,6 +31,7 @@ spring:
 
     listener:
       missing-topics-fatal: false
+      concurrency: 2
 
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
