--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,6 +31,7 @@ spring:
 
     listener:
       missing-topics-fatal: false
+      ack-mode: MANUAL_IMMEDIATE
       concurrency: 2
 
     producer:
@@ -49,3 +50,8 @@ kafka:
 
   consumer:
     topic: test-topic
+
+retry:
+  consumer:
+    backoff-ms: 1000
+    max-retries: 3
