--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -27,6 +27,7 @@ spring:
 
     listener:
       missing-topics-fatal: false
+      ack-mode: MANUAL_IMMEDIATE
 
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -38,9 +39,16 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: com.ctf.kafka.test.support.avro.CustomKafkaAvroMessageDeserializer
 
+retry:
+  consumer:
+    backoff-ms: 1000
+    max-attempts: 3
+
 kafka:
   producer:
     topic: test-topic
 
   consumer:
     topic: test-topic
+
+
