--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,12 @@ spring:
         registry:
           url: http://localhost:8081
 
+      spring:
+        deserializer:
+          value:
+            delegate:
+              class: io.confluent.kafka.serializers.KafkaAvroDeserializer
+
       specific:
         avro:
           reader: true
@@ -42,7 +48,7 @@ spring:
       group-id: testing-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer2
 
 kafka:
   producer:
