--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ group = 'com.ctf'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = JavaVersion.VERSION_11
+	sourceCompatibility = JavaVersion.VERSION_14
+	targetCompatibility = JavaVersion.VERSION_14
 }
 
 configurations {
@@ -35,6 +36,9 @@ repositories {
 }
 
 dependencies {
+	compileOnly 'org.projectlombok:lombok:1.18.20'
+	annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
 	implementation "org.apache.avro:avro:1.9.2"
 	implementation 'io.confluent:kafka-avro-serializer:5.5.0'
 
@@ -52,6 +56,8 @@ dependencies {
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testImplementation 'org.awaitility:awaitility:4.0.2'
 	testRuntimeOnly 'com.h2database:h2:1.4.200'
+	testCompileOnly 'org.projectlombok:lombok:1.18.20'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
 
 test {
