--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.4.0'
+	id 'org.springframework.boot' version '2.4.3'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java-library'
 	id 'idea'
@@ -36,7 +36,7 @@ repositories {
 
 dependencies {
 	implementation "org.apache.avro:avro:1.9.2"
-	implementation 'io.confluent:kafka-avro-serializer:5.5.0'
+	implementation 'io.confluent:kafka-avro-serializer:6.1.0'
 
 	implementation 'org.postgresql:postgresql'
 
@@ -44,6 +44,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
