--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,11 +9,11 @@ spring:
 
   jpa:
     show-sql: false
-    database-platform: org.hibernate.dialect.PostgreSQL95Dialect
     properties:
       hibernate:
         format_sql: true
         use_sql_comments: true
+        dialect: org.hibernate.dialect.PostgreSQL95Dialect
     hibernate:
       ddl-auto: update
 
