--- a/src/test/resources/application-integration.yaml
+++ b/src/test/resources/application-integration.yaml
@@ -4,6 +4,9 @@ spring:
 
   jpa:
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
 
   kafka:
     bootstrap-servers: ${spring.embedded.kafka.brokers}
